--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <main>
     <article>
         <h2> Hey this is my website its not much right now but as I learn more I'll become amazing</h2>
-
+        <p> Anyways Hi I'm Andrew and this website here is my own</p>
 
     </article>
 </main>
