--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Andrew's Html Website</title>
     <meta charset="utf-8">
     <meta name="veiwpoint" content="width=device-width">
-    <link href="style.css" rel="stylesheet"type="text/css" />
+    <link href="css/style.css" rel="stylesheet"type="text/css" />
 
 </head>
 <body>
@@ -18,7 +18,6 @@
             <li><a href= "">Not in use yet</a></li>
 			<li><a href= "">Not in use yet</a></li>
 			<li><a href="">Not in use yet</a></li>
-            
         </ul>
     </nav>
 
