added picture and text

--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@
 <main>
     <article>
         <h2> Hey this is my website its not much right now but as I learn more I'll become amazing</h2>
+        
         <p> Anyways Hi I'm Andrew and this website here is my own</p>
+        
+        <p>I set this style of css up all by myself, its just like the coding that we did in code 101</p>
 
+        <img src="https://img.webmd.com/dtmcms/live/webmd/consumer_assets/site_images/article_thumbnails/video/caring_for_your_kitten_video/650x350_caring_for_your_kitten_video.jpg">
     </article>
 </main>
 <footer>
