updated and added

--- a/indexpart2.html
+++ b/indexpart2.html
@@ -5,17 +5,17 @@
     <title>Andrew's Html Website</title>
     <meta charset="utf-8">
     <meta name="veiwpoint" content="width=device-width">
-    <link href="./css/style.css" rel="stylesheet">
+    <link href="./css/stylepart2.css" rel="stylesheet">
 
 </head>
 <body>
 
 <header>
-    <h1> This is my website | Second Page </h1>
+    <h1> This is my website | Main Page </h1>
     <nav>
         <ul>
-            <li><a href= "indexpart2.html">Home</a></li>
-            <li><a href="index.html" class="active">The Second Page</a></li>
+            <li><a href="indexpart2.html" class="active">Home</a></li>
+            <li><a href= "index.html">The Newer Website</a></li>
 			<li><a href= "">Not in use yet</a></li>
 			<li><a href="">Not in use yet</a></li>
         </ul>
