--- a/indexpart2.html
+++ b/indexpart2.html
@@ -14,7 +14,7 @@
     <h1> This is my website | Main Page </h1>
     <nav>
         <ul>
-            <li><a href="indexpart2.html" class="active">Home</a></li>
+            <li><a href="indexpart2.html" class="active">The First Website</a></li>
             <li><a href= "index.html">The Newer Website</a></li>
 			<li><a href= "">Not in use yet</a></li>
 			<li><a href="">Not in use yet</a></li>
