--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1> This is my website | Second Page </h1>
     <nav>
         <ul>
-            <li><a href= "indexpart2.html">Home</a></li>
+            <li><a href= "indexpart2.html">The First Page</a></li>
             <li><a href="index.html" class="active">The Second Page</a></li>
 			<li><a href= "">Not in use yet</a></li>
 			<li><a href="">Not in use yet</a></li>
