--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Andrew's Html Website</title>
     <meta charset="utf-8">
     <meta name="veiwpoint" content="width=device-width">
-    <link href="./css/stylepart2.css" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
 
 </head>
 <body>
