--- a/indexpart2.html
+++ b/indexpart2.html
@@ -11,7 +11,7 @@
 <body>
 
 <header>
-    <h1> This is my website | Main Page </h1>
+    <h1> This is my website | The Newest Page </h1>
     <nav>
         <ul>
             <li><a href="indexpart2.html" class="active">The First Page</a></li>
