--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <header>
-    <h1> This is my website | Second Page </h1>
+    <h1> This is my website | The Older Page </h1>
     <nav>
         <ul>
             <li><a href= "indexpart2.html">The First Page</a></li>
