--- a/indexpart2.html
+++ b/indexpart2.html
@@ -16,8 +16,7 @@
         <ul>
             <li><a href="indexpart2.html" class="active">The First Page</a></li>
             <li><a href= "index.html">The Second Page</a></li>
-			<li><a href= "">Not in use yet</a></li>
-			<li><a href="">Not in use yet</a></li>
+            <script src ="js/app2.js"></script>
         </ul>
     </nav>
 
@@ -31,6 +30,8 @@
         <h2> This my website its not much right now but as I learn more I'll become amazing</h2>
         
         <p>I set this style of css up all by myself, its just like the coding that we did in code 101</p>
+
+        <script src="js/app.js"></script>
 
         <img src="https://img.webmd.com/dtmcms/live/webmd/consumer_assets/site_images/article_thumbnails/video/caring_for_your_kitten_video/650x350_caring_for_your_kitten_video.jpg">
         
