--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta charset="utf-8">
     <meta name="veiwpoint" content="width=device-width">
     <link href="./css/style.css" rel="stylesheet">
-
 </head>
 <body>
 
 <header>
-    <h1> This is my website | The Older Page </h1>
+    <h1> This is my website | Newest Page </h1>
+    <script src="js/app.js"></script>
     <nav>
         <ul>
             <li><a href= "indexpart2.html">The First Page</a></li>
@@ -24,13 +24,11 @@
 <main>
     <aside>
             <p>Hi I'm Andrew and this is my website!</p>
-            <script src ="js/app2.js"></script>
     </aside>
     
     <article>
-        <h2> This my website its not much right now but as I learn more I'll become amazing</h2>
-        <script src="js/app.js"></script>
-        
+        <h2>This my website its not much right now but as I learn more I'll become amazing</h2>
+
         <p>I set this style of css up all by myself, its just like the coding that we did in code 101</p>
 
         <img src="https://img.webmd.com/dtmcms/live/webmd/consumer_assets/site_images/article_thumbnails/video/caring_for_your_kitten_video/650x350_caring_for_your_kitten_video.jpg">
