--- a/indexpart2.html
+++ b/indexpart2.html
@@ -12,11 +12,11 @@
 
 <header>
     <h1> This is my website | The Oldest Page </h1>
-    <script src="js/app.js"></script>
     <nav>
         <ul>
             <li><a href="indexpart2.html" class="active">The First Page</a></li>
             <li><a href= "index.html">The Second Page</a></li>
+            <div id="placeholder1"></div>
         </ul>
     </nav>
 
@@ -40,7 +40,7 @@
 <footer>
     <p> Copyright 2020 | Andrew D. </p>
 </footer>
-
+<script src="js/app.js"></script>
 </body>
 
 </html>
