--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <header>
-    <h1> This is my website | Newest Page </h1>
+    <h1 id="greeting-placeholder"> This is my website | Newest Page </h1>
     <nav>
         <ul>
             <li><a href= "indexpart2.html">The First Page</a></li>
@@ -23,10 +23,11 @@
 <main>
     <aside>
             <p>Hi I'm Andrew and this is my website!</p>
+            <p id="math"> place holder</p>
     </aside>
     
     <article>
-        <h2>This my website its not much right now but as I learn more I'll become amazing</h2>
+        <h2 id="personal-hello">This my website its not much right now but as I learn more I'll become amazing</h2>
 
         <p>I set this style of css up all by myself, its just like the coding that we did in code 101</p>
 
