--- a/indexpart2.html
+++ b/indexpart2.html
@@ -6,17 +6,16 @@
     <meta charset="utf-8">
     <meta name="veiwpoint" content="width=device-width">
     <link href="./css/stylepart2.css" rel="stylesheet">
-
 </head>
 <body>
 
 <header>
-    <h1> This is my website | The Oldest Page </h1>
+    <h1 id="greeting-placeholder"> This is my website | The Oldest Page </h1>
     <nav>
         <ul>
             <li><a href="indexpart2.html" class="active">The First Page</a></li>
             <li><a href= "index.html">The Second Page</a></li>
-            <div id="placeholder1"></div>
+
         </ul>
     </nav>
 
