--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <p> Copyright 2020 | Andrew D. </p>
 </footer>
 <script src="js/app.js"></script>
+<script src='js/loopapp.js'></script>
 </body>
 
 </html>
