--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
         <h2 id="personal-hello">This my website its not much right now but as I learn more I'll become amazing</h2>
 
         <p>I set this style of css up all by myself, its just like the coding that we did in code 101</p>
-
-        <img src="https://img.webmd.com/dtmcms/live/webmd/consumer_assets/site_images/article_thumbnails/video/caring_for_your_kitten_video/650x350_caring_for_your_kitten_video.jpg">
         
-        <p>And this is a cute cat picture to brighten up your day!</p>
+        <img id="topSpace" src="http://placehold.it/960x450">
+
+        <p>thanks for ordering with us today</p>
     </article>
 
 </main>
 <footer>
     <p> Copyright 2020 | Andrew D. </p>
 </footer>
-<script src="js/app.js"></script>
 <script src='js/loopapp.js'></script>
+<script src="js/app.js"></script>
 </body>
 
 </html>
